--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "eslint": "^9.36.0",
+    "eslint-plugin-react-dom": "^2.3.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint-plugin-react-x": "^2.3.4",
     "globals": "^16.4.0",
     "sass": "^1.93.2",
     "typescript": "~5.9.3",
