--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "design-patterns",
-   "homepage": "https://paul-oconnell.github.io/design-patterns",
+   "homepage": "https://pauloconnell.github.io/design-patterns",
    "private": true,
    "version": "0.0.0",
    "type": "module",
